
<resources>
    <string name="app_name" translatable="false">pMetro</string>
    <string name="action_settings">Settings</string>
    <string name="action_wait_time">Wait time</string>
    <string name="action_none">Ignore</string>
    <string name="action_about">About</string>

    <string name="full_name">pMetro for Android</string>
    <string name="copyright" translatable="false">Copyright © 2014</string>
    <string name="author_email">Gennady Zavodovskiy, utyff@mail.ru</string>
    <string name="author2">Fedor Ermishin</string>
    <string name="pmetro_info">pMetro project http://pmetro.su\nCopyright © Boris Muradov</string>
    <string name="mapinfo">Map information:</string>
    <string name="deviceinfo">Device information</string>
    <string name="version">Version:</string>

    <string name="title_activity_station_info">No station</string>
    <string name="action_transport">Transport</string>
    <string name="settings_general">General</string>
    <string name="settings_catalog">Maps Catalog</string>
    <string name="settings_catalog_sum">Maps catalog settings</string>
    <string name="settings_general_sum">General program settings</string>
    <string name="catalog_storage">Maps catalog storage</string>
    <string name="catalog_storage_sum" translatable="false">-</string>
    <string name="choose_storage">Choose storage</string>
    <string name="hw_acceleration">Hardware Acceleration</string>
    <string name="route_difference">Maximum time difference</string>
    <string name="route_max_transfers">Maximum transfers</string>
    <string name="catalog_site">Catalog site</string>
    <string name="local_map">Local maps</string>
    <string name="catalog">Catalog</string>
    <string name="language">Language</string>
    <string name="catalog_update">Maps update period</string>
    <string name="catalog_update_now">Update catalog now</string>
    <string name="catalog_management">Map Catalog Management</string>
    <string name="last_changes">Last changes -</string>
    <string name="last_update">Last update -</string>
    <string name="no_data">No data</string>
    <string name="city">City:</string>
    <string name="modified">Modified:</string>
    <string name="comment">Comment:</string>
    <string name="map_name">Name:</string>
    <string name="kbyte">Kb</string>
    <string name="catalog_load_file">Load</string>
    <string name="cancel">Cancel</string>
    <string name="map_open_file">Open</string>
    <string name="map_delete_file">Delete</string>
    <string name="action_open">Open map</string>
    <string name="choose_station">Choose station:</string>
    <string name="no_internet">Not connected to Internet</string>
    <string name="hintFrom"> From</string>
    <string name="hintTo"> To</string>
    <string name="graphics">Graphics</string>
    <string name="site_map_path">Path to maps</string>
    <string name="catalog_list">Catalog file name</string>
    <string name="choose_route">Choose route</string>
    <string name="select_interface_language">Select interface language</string>
    <string name="routes">Routes</string>
    <string name="map_not_loaded">"Map is not loaded"</string>
    <string name="loading_map">"Loading map…"</string>
    <string name="map_station_start">From</string>
    <string name="map_station_finish">To</string>
    <string name="map_station_via">Via</string>
    <string name="map_station_block">Block</string>
    <string name="map_station_unblock" >Unblock</string>
    <string name="map_station_info">Info</string>

</resources>
