<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MapActivity">

    <item
        android:id="@+id/action_open"
        android:title="@string/action_open"
        app:showAsAction="never">
        <menu>
        </menu>
    </item>
    <item
        android:id="@+id/action_transport"
        android:title="@string/action_transport"
        app:showAsAction="never">
        <menu>
        </menu>
    </item>
    <item
        android:id="@+id/action_wait_time"
        android:title="@string/action_wait_time"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single" android:id="@+id/action_group_wait_time">
                <item android:id="@+id/action_none" android:orderInCategory="9" android:title="@string/action_none"/>
            </group>
        </menu>
    </item>
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never"/>
    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="101" app:showAsAction="never" />

</menu>
