<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="Language"
        android:title="@string/language"
        android:defaultValue="English"
        android:entries="@array/language_list"
        android:entryValues="@array/language_list_values"
        android:dialogTitle="@string/language" />

    <PreferenceCategory
        android:title="@string/routes">

        <EditTextPreference
            android:key="Route_difference"
            android:title="@string/route_difference"
            android:defaultValue="3"
            android:inputType="number"
            android:dialogTitle="@string/route_difference" />

        <EditTextPreference
            android:key="Route_max_transfers"
            android:title="@string/route_max_transfers"
            android:defaultValue="5"
            android:inputType="number"
            android:dialogTitle="@string/route_max_transfers" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/graphics">

        <CheckBoxPreference
            android:key="HW_Acceleration"
            android:defaultValue="true"
            android:title="@string/hw_acceleration"
            android:dialogTitle="@string/hw_acceleration" />

    </PreferenceCategory>

</PreferenceScreen>
