<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.utyf.pmetro.AboutActivity">

    <TextView android:text="@string/full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/appName"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/appLogo"
        android:layout_marginLeft="70dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/appLogo"
        android:layout_marginLeft="40dp"
        android:src="@drawable/pmetro"
        android:layout_alignTop="@+id/appName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:id="@+id/version_num"
        android:onClick="versionClick"
        android:clickable="true"
        android:layout_below="@+id/appName"
        android:layout_alignLeft="@+id/appName"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="build 123456"
        android:id="@+id/build"
        android:clickable="false"
        android:layout_toRightOf="@+id/version_num"
        android:layout_toEndOf="@+id/version_num"
        android:layout_marginLeft="10dp"
        android:layout_alignTop="@+id/version_num" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:id="@+id/copyright"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/appLogo"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author_email"
        android:id="@+id/email"
        android:layout_below="@+id/copyright"
        android:layout_alignLeft="@+id/copyright"
        android:layout_alignStart="@+id/copyright"
        android:layout_marginTop="7dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pmetro_info"
        android:id="@+id/pmetroinfo"
        android:layout_below="@+id/email"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@id/email"
        android:layout_marginTop="7dp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollInfo"
        android:minHeight="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/pmetroinfo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mapinfo"
                android:id="@+id/textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mapInfo"
                android:textSize="10sp"
                android:text="Avoid"
                android:layout_marginTop="5dp"
                android:layout_alignTop="@+id/scrollInfo"
                android:layout_toRightOf="@+id/textView"
                android:layout_toEndOf="@+id/textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/deviceInfo"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/scrollInfo"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_weight="0.15" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
